--- a/CalzadoFalabella/app/components/categorias/categorias.css
+++ b/CalzadoFalabella/app/components/categorias/categorias.css
@@ -1,7 +1,7 @@
 @keyframes opacity {
     from {
         opacity: 0.5;
-        transform: translate(10, 10);
+        transform: translate(30, 30);
     }
     25% {
         opacity: 0.7;
@@ -9,7 +9,7 @@
     }
     50% {
         opacity: 0.8;
-        transform: translate(-10, -10);
+        transform: translate(-30, -39);
     }
     to {
         opacity: 1;
@@ -21,7 +21,7 @@
     font-size: 60;
     text-align: center;
     animation-name: opacity;
-    animation-duration: 6;
+    animation-duration: 10;
     color:white;
     opacity: 1;
 }
@@ -42,9 +42,12 @@
     }
 }
 
-.padded-label-stack {}
-
-.padded-label-stack {}
+.padded-label{
+    margin-top: 30;
+    margin-left: 400;
+    margin-bottom: 30;
+    margin-right: 400;
+}
 
 .padded-label-stack-1 {
     margin: 2;
