Changes made by Victor Enrique Malaver Salcedo (kike.doohs.apps@gmail.com). ssssin video

--- a/CalzadoFalabella/app/components/categorias/categorias.css
+++ b/CalzadoFalabella/app/components/categorias/categorias.css
@@ -1,145 +1,6 @@
-@keyframes opacity {
-    from {
-        transform: translate(30, 30);
-    }
-    25% {
-        transform: translate(0, 0);
-    }
-    50% {
-        transform: translate(-30, -39);
-    }
-    to {
-        transform: translate(0, 0);
-    }
+Repeater GridLayout{
+    border-width: 1;
+    border-style: solid;
+    border-color: #d8d8d8;
 }
 
-.title-label {
-    font-size: 60;
-    text-align: center;
-    animation-name: opacity;
-    animation-duration: 10;
-    color:white;
-}
-
-@keyframes play {
-    from {
-        opacity: 0;
-        transform: scale(0.3, 0.3);
-    }
-    50% {
-        opacity: 0.8;
-        transform: scale(1.3, 1.3);
-        animation-timing-function: ease-out;
-    }
-    to {
-        opacity: 1;
-        transform: scale(1, 1);
-    }
-}
-
-.padded-label{
-    margin-top: 30;
-    margin-left: 400;
-    margin-bottom: 30;
-    margin-right: 400;
-}
-
-.padded-label-stack-1 {
-    margin: 2;
-    animation-name: play;
-    animation-duration: 0.4;
-    animation-delay: 0.1;
-    animation-fill-mode: forwards;
-    opacity: 0;
-    transform: scale(0.5, 0.5);
-}
-
-.padded-label-stack-2 {
-    margin: 2;
-    animation-name: play;
-    animation-duration: 0.4;
-    animation-delay: 0.4;
-    animation-fill-mode: forwards;
-    opacity: 0;
-    transform: scale(0.5, 0.5);
-}
-
-.padded-label-stack-3 {
-    margin: 2;
-    animation-name: play;
-    animation-duration: 0.4;
-    animation-delay: 0.7;
-    animation-fill-mode: forwards;
-    opacity: 0;
-    transform: scale(0.5, 0.5);
-}
-
-.padded-label-stack-4 {
-    margin: 2;
-    animation-name: play;
-    animation-duration: 0.4;
-    animation-delay: 1;
-    animation-fill-mode: forwards;
-    opacity: 0;
-    transform: scale(0.5, 0.5);
-}
-
-.padded-label-stack-5 {
-    margin: 2;
-    animation-name: play;
-    animation-duration: 0.4;
-    animation-delay: 1.3;
-    animation-fill-mode: forwards;
-    opacity: 0;
-    transform: scale(0.5, 0.5);
-}
-
-.padded-label-stack-6 {
-    margin: 2;
-    animation-name: play;
-    animation-duration: 0.4;
-    animation-delay: 1.6;
-    animation-fill-mode: forwards;
-    opacity: 0;
-    transform: scale(0.5, 0.5);
-}
-
-.padded-label-stack-7 {
-    margin: 2;
-    animation-name: play;
-    animation-duration: 0.4;
-    animation-delay: 1.9;
-    animation-fill-mode: forwards;
-    opacity: 0;
-    transform: scale(0.5, 0.5);
-}
-
-.padded-label-stack-8 {
-    margin: 2;
-    animation-name: play;
-    animation-duration: 0.4;
-    animation-delay: 2.2;
-    animation-fill-mode: forwards;
-    opacity: 0;
-    transform: scale(0.5, 0.5);
-}
-
-.padded-label-stack-9 {
-    margin: 2;
-    animation-name: play;
-    animation-duration: 0.4;
-    animation-delay: 2.5;
-    animation-fill-mode: forwards;
-    opacity: 0;
-    transform: scale(0.5, 0.5);
-}
-
-.padded-label-stack-10 {
-    margin: 2;
-    animation-name: play;
-    animation-duration: 0.4;
-    animation-delay: 2.8;
-    animation-fill-mode: forwards;
-    opacity: 0;
-    transform: scale(0.5, 0.5);
-}
