--- a/CalzadoFalabella/app/app.css
+++ b/CalzadoFalabella/app/app.css
@@ -149,14 +149,16 @@ switch {
 /* Add custom code here. For more information about custom code, see http://docs.telerik.com/platform/screenbuilder/troubleshooting/how-to-keep-custom-code-changes */
 
 
-/* END_CUSTOM_CODE_nativeScriptApp */
+/* END_CUSTOM_CODE_nativeScriptApp */ 
 
-actionBar {
+ActionBar {
     background-color: #b2c804;
     color: white;
-    height: 0;
+    text-align: center;
+    font-weight: bold;
+    font-size: 50;
+    height: 100;
 }
-
 AbsoluteLayout {
     text-align: right;
 }
@@ -165,4 +167,165 @@ AbsoluteLayout Image {
     height: 100;
     width: 100;
     margin: 30;
+}
+
+
+
+/**/
+@keyframes play {
+    from {
+        opacity: 0;
+        transform: scale(0.3, 0.3);
+    }
+    50% {
+        opacity: 0.8;
+        transform: scale(1.3, 1.3);
+        animation-timing-function: ease-out;
+    }
+    to {
+        opacity: 1;
+        transform: scale(1, 1);
+    }
+}
+
+.padded-label{
+    margin-top: 30;
+    margin-left: 400;
+    margin-bottom: 30;
+    margin-right: 400;
+}
+
+.padded-label-stack-0 {
+    margin: 2;
+    animation-name: play;
+    animation-duration: 0.1;
+    animation-delay: 0.5;
+    animation-fill-mode: forwards;
+    opacity: 0;
+    transform: scale(0.5, 0.5);
+}
+
+.padded-label-stack-1 {
+    margin: 2;
+    animation-name: play;
+    animation-duration: 0.4;
+    animation-delay: 0.7;
+    animation-fill-mode: forwards;
+    opacity: 0;
+    transform: scale(0.5, 0.5);
+}
+
+.padded-label-stack-2 {
+    margin: 2;
+    animation-name: play;
+    animation-duration: 0.4;
+    animation-delay: 0.9;
+    animation-fill-mode: forwards;
+    opacity: 0;
+    transform: scale(0.5, 0.5);
+}
+
+.padded-label-stack-3 {
+    margin: 2;
+    animation-name: play;
+    animation-duration: 0.4;
+    animation-delay: 1.1;
+    animation-fill-mode: forwards;
+    opacity: 0;
+    transform: scale(0.5, 0.5);
+}
+
+.padded-label-stack-4 {
+    margin: 2;
+    animation-name: play;
+    animation-duration: 0.4;
+    animation-delay: 1.35;
+    animation-fill-mode: forwards;
+    opacity: 0;
+    transform: scale(0.5, 0.5);
+}
+
+.padded-label-stack-5 {
+    margin: 2;
+    animation-name: play;
+    animation-duration: 0.4;
+    animation-delay: 1.5;
+    animation-fill-mode: forwards;
+    opacity: 0;
+    transform: scale(0.5, 0.5);
+}
+
+.padded-label-stack-6 {
+    margin: 2;
+    animation-name: play;
+    animation-duration: 0.4;
+    animation-delay: 1.7;
+    animation-fill-mode: forwards;
+    opacity: 0;
+    transform: scale(0.5, 0.5);
+}
+
+.padded-label-stack-7 {
+    margin: 2;
+    animation-name: play;
+    animation-duration: 0.4;
+    animation-delay: 1.9;
+    animation-fill-mode: forwards;
+    opacity: 0;
+    transform: scale(0.5, 0.5);
+}
+
+.padded-label-stack-8 {
+    margin: 2;
+    animation-name: play;
+    animation-duration: 0.4;
+    animation-delay: 2.1;
+    animation-fill-mode: forwards;
+    opacity: 0;
+    transform: scale(0.5, 0.5);
+}
+
+.padded-label-stack-9 {
+    margin: 2;
+    animation-name: play;
+    animation-duration: 0.4;
+    animation-delay: 2.3;
+    animation-fill-mode: forwards;
+    opacity: 0;
+    transform: scale(0.5, 0.5);
+}
+
+.padded-label-stack-10 {
+    margin: 2;
+    animation-name: play;
+    animation-duration: 0.4;
+    animation-delay: 2.5;
+    animation-fill-mode: forwards;
+    opacity: 0;
+    transform: scale(0.5, 0.5);
+}
+/**/
+
+
+@keyframes opacity {
+    from {
+        transform: translate(15, 10);
+    }
+    25% {
+        transform: translate(0, 0);
+    }
+    50% {
+        transform: translate(-15, -10);
+    }
+    to {
+        transform: translate(0, 0);
+    }
+}
+
+.title-label {
+    font-size: 30;
+    text-align: center;
+    animation-name: opacity;
+    animation-duration: 10;
+    z-index	:999;
 }
